@@ -29,7 +29,8 @@ survcheck <- function(formula, data, id, istate, istate0="(s0)",
     if (!is.null(istate) && length(istate) !=n) stop("wrong length for istate")
 
     fit <- survcheck2(Y, id, istate, istate0)
-#    fit$istate <- NULL   # used by coxph, but not part of user printout
+    fit$n <- c(id = length(unique(id)), observations =length(id), 
+               transitions = sum(fit$transitions))
     na.action <- attr(mf, "na.action")
     if (!is.null(na.action)) {
         fit$na.action <- na.action
@@ -44,7 +45,8 @@ survcheck <- function(formula, data, id, istate, istate0="(s0)",
             }
         }
     }
-    fit$Y <- Y      # used by the summary function
+
+    fit$Y <- Y      # used by the summary function for details
     fit$id <- unname(id)    #   ""  ""
     fit$call <- Call
     class(fit) <- "survcheck"
@@ -67,8 +69,8 @@ survcheck <- function(formula, data, id, istate, istate0="(s0)",
 survcheck2 <- function(y, id, istate=NULL, istate0="(s0)") {
     n <- length(id)
     ny <- ncol(y)
-    # the next few line are a debug for my code, since survcheck2 is not visible
-    #  to users
+    # the next few line are a debug for my code; survcheck2 is not visible
+    #  to users so only survival can call it directly
     if (!is.Surv(y) || is.null(attr(y, "states")) ||
         any(y[,ncol(y)] > length(attr(y, "states"))))
         stop("survcheck2 called with an invalid y argument")
@@ -93,59 +95,69 @@ survcheck2 <- function(y, id, istate=NULL, istate0="(s0)") {
     index <- match(levels(cstate), ystate, nomatch=0)
     states <- c(levels(cstate)[index==0], ystate)
     cstate2 <- factor(cstate, states)
-    # we keep a form with all the levels for returning to the parent (cstate2)
-    #  one without this (cstate) to make a smaller transitions table
 
     # Calculate the counts per id for each state, e.g., 10 subjects had
     #  3 visits to state 2, etc.  
-    # Don't count "censored" as an endpoint, nor any missings.  But we can't
-    #  just omit censored rows, or those with 0 transitions don't get counted!
-    #  Instead remove the 'censored' column after making tab1
+    # Count the censors, so that each subject gets a row in the table,
+    #  but then toss that column
     tab1 <- table(id, factor(y[,ncol(y)], 0:length(ystate)))[,-1, drop=FALSE]
     tab1 <- cbind(tab1, rowSums(tab1))
     tab1.levels <- sort(unique(c(tab1)))  #unique counts
     events <- apply(tab1, 2, function(x) table(factor(x, tab1.levels)))
     dimnames(events) = list("count"= tab1.levels,
                                 "state"= c(ystate, "(any)"))
-    
-    # check for errors
+
+    # Use a C routine to create 3 variables: a: an index of whether this is
+    #   the first (1) or last(2) observation for a subject, 3=both, 0=neither,
+    #  b. current state, and 
+    #  c. sign of (start of this interval - end of prior one)
+    # start by making stat2 = status re-indexed to the full set of states
+    ny <- ncol(y)
     sindx <- match(ystate, states)
-    if (ncol(y)==2) y <- cbind(0,y) # make it 3 cols for the C routine
-    stat2 <- ifelse(y[,3]==0, 0L, 
-                    sindx[pmax(1, y[,3])])  # map the status
-    index <- order(id, y[,ny-1], y[,1])  # by start time, within stop time
-    id2 <- match(id, id)  # we need unique integers, but don't need 1, 2,...
-    check <- .Call(Cmulticheck, y, stat2, id2, as.integer(cstate2), index-1L)
-    if (inull) {
+    stat2 <- ifelse(y[,ny]==0, 0L, sindx[pmax(1L, y[,ny])])
+    id2 <- match(id, unique(id))  # we need unique integers
+    if (ncol(y)==2) {
+        index <- order(id, y[,1])
+        check <- .Call(Cmulticheck, rep(0., n), y[,1], stat2, id2,
+                       as.integer(cstate2), index- 1L)
+    } else {
+        index <- order(id, y[,2], y[,1])
+        check <- .Call(Cmulticheck, y[,1], y[,2], stat2, id2,
+                       as.integer(cstate2), index- 1L)
+    }       
+
+    if (inull && ny> 2) {
         # if there was no istate entered in, use the constructed one from
         # the check routine
+        # if ny=2 then every row starts at time 0
         cstate2 <-factor(check$cstate, seq(along=states), states)
     }       
 
     # create the transtions table
     # if someone has an intermediate visit, i.e., (0,10, 0)(10,20,1), don't
     #  report the false 'censoring' in the transitions table
-    yfac <- factor(y[,3], c(seq(along=ystate), 0), to.names)
-    keep <- (y[index,3]!=0 | !duplicated(id[index], fromLast=TRUE))
-    keep[index] <- keep  # put it back into data order
+    # make it compact by removing any rows or cols that are all 0
+    keep <- (stat2 !=0 | check$dupid > 1)  # not censored or last obs of this id
     transitions <- table(from=cstate2[keep], 
-                         to= yfac[keep], 
+                         to= factor(stat2[keep], c(seq(along=states), 0),
+                                    c(states, "(censored)")),
                          useNA="ifany")
+   transitions <- transitions[rowSums(transitions) >0, colSums(transitions)>0,
+                              drop = FALSE]
 
     # now continue with error checks
     # A censoring hole in the middle, such as happens with survSplit,
-    #  is correctly ignored by the C routine. 
-    #
+    #  uses "last state carried forward" in Cmultistate, which also
+    #  sets the "gap" to 0 for the first obs of a subject
     mismatch <- (as.numeric(cstate2) != check$cstate)
                  
-
     # gap = 0   (0, 10], (10, 15]
     # gap = 1   (0, 10], (12, 15]  # a hole in the time
     # gap = -1  (0, 10], (9, 15]   # overlapping times
     flag <- c(overlap= sum(check$gap < 0), 
               gap =    sum(check$gap > 0 & !mismatch),
               jump =   sum(check$gap > 0 & mismatch),
-              teleport = sum(check$gap==0 & mismatch & check$dupid==1))
+              teleport = sum(check$gap==0 & mismatch & check$dupid%%2 ==0))
 
     rval <- list(states=states, transitions=transitions,
                  events= t(events), flag=flag, 
@@ -165,7 +177,7 @@ survcheck2 <- function(y, id, istate=NULL, istate0="(s0)") {
         rval$jump <- list(row=j, id= unique(id[j]))
     }
     if (flag["teleport"] > 0) {
-        j <- (check$gap==0 & mismatch)
+        j <- which(check$gap==0 & mismatch)
         rval$teleport <- list(row=j, id= unique(id[j]))
     }
 
